# QtPosixSignal

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  signallistener.cpp  signallistener.hpp
